objects/Opportunities__c/Opportunities__c.object-meta.xml
<CustomObject>
    <label>Opportunities</label>
    <nameField>
        <label>Opportunities Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>