objects/Opportunities__c/fields/Cargo_type__c.field-meta.xml
<CustomField>
    <fullName>Cargo_type__c</fullName>
    <label>Cargo type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Food &amp; Beverages</fullName>
            </value>
            <value>
                <fullName>Paper &amp; Chemical Products</fullName>
            </value>
            <value>
                <fullName>Electtronics &amp; Electrical material</fullName>
            </value>
            <value>
                <fullName>Machinery, Utensils &amp; Metalware</fullName>
            </value>
            <value>
                <fullName>Marble &amp; Tiles</fullName>
            </value>
            <value>
                <fullName>Funiture, Frames, Wood Articles</fullName>
            </value>
            <value>
                <fullName>Textiles, Gaments and accesssories</fullName>
            </value>
            <value>
                <fullName>Glass, Ceramic and Plasticware</fullName>
            </value>
            <value>
                <fullName>Seafood</fullName>
            </value>
            <value>
                <fullName>Rice</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>