objects/Opportunities__c/fields/P_O_L_A_O_D__c.field-meta.xml
<CustomField>
    <fullName>P_O_L_A_O_D__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.O.L(A.O.D)</label>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipLabel>Opportunities (P.O.L(A.O.D))</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>